creates a semi universal archive page, removes category page, adjusts footer link colors, adds full @font face support for BlanchCon, adjusts padding in footer, slightly adjusts header color to offset from content, adds margin below h1 in home main content, renames pre_get_posts func, adds check to three row partial, only renders post if has thumbnail (to help sort old outdated posts)

--- a/css/scss/generic/_variables.scss
+++ b/css/scss/generic/_variables.scss
@@ -10,6 +10,7 @@ $blue : #BDCED3;
 $creme : #E4E2C6;
 $creme-light : #EAE8D3;
 $creme-light-2 : #F4F2E4;
+$creme-dark : #DEDCBB;
 $grey : #6C6C71;
 $grey-light : #989898;
 $grey-light-2 : #D1D1D4;
@@ -38,10 +39,12 @@ $brand-linkedin: #217bc1;
 //Typography
 @font-face {
 	font-family: 'BlanchCon';
-	src:url('../fonts/blanchcon.otf');
-	font-weight: normal;
-	font-style: normal;
-}
+	src: url('../fonts/blanchcon.eot'); /* IE9 Compat Modes */
+	src: url('../fonts/blanchcon.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	     url('../fonts/blanchcon.woff') format('woff'), /* Modern Browsers */
+	     url('../fonts/blanchcon.ttf')  format('truetype'), /* Safari, Android, iOS */
+	     url('../fonts/blanchcon.svg#svgBlanchCon') format('svg'); /* Legacy iOS */
+	}
 
 
 $font : "freight-text-pro", "Adobe Caslon Pro", Georgia, Times, "Times New Roman", serif;
