--- a/css/scss/objects/_sections.scss
+++ b/css/scss/objects/_sections.scss
@@ -11,6 +11,10 @@
 .section.home-main {
 	background:transparent;
 	padding:0;
+
+	h1 {
+		margin-bottom: 0.25em;
+	}
 }
 .section.cont-wrap {
 	padding: 6% 1%;
