--- a/css/scss/objects/_footer.scss
+++ b/css/scss/objects/_footer.scss
@@ -24,16 +24,16 @@
 	}
 
 	a {
-		color: $gray-light;
+		color: $creme-light;
 
         &:hover {
-            color: $gray;
+            color: $blue-med;
         }
 	}
 	
 	.left,
 	.right {
-		padding: $padpx-triple $padpx;
+		padding: $padpx-triple $padpx-double;
 		float:none;
 	}
 	.left {
