--- a/css/style.css
+++ b/css/style.css
@@ -1183,7 +1183,7 @@ td {
 /* line 35, scss/objects/_footer.scss */
 .footer .left,
 .footer .right {
-  padding: 60px 40px;
+  padding: 60px 20px;
   float: none;
 }
 /* line 39, scss/objects/_footer.scss */
@@ -1840,21 +1840,11 @@ td {
   }
 }
 
-/* line 11, scss/objects/_sections.scss */
-.section.home-main {
-  background: transparent;
-  padding: 0;
-}
-/* line 15, scss/objects/_sections.scss */
-.section.home-main h1 {
-  margin-bottom: 0.25em;
-}
-
-/* line 19, scss/objects/_sections.scss */
+/* line 12, scss/objects/_sections.scss */
 .section.cont-wrap {
   padding: 6% 1%;
 }
-/* line 23, scss/objects/_sections.scss */
+/* line 16, scss/objects/_sections.scss */
 .section.cont-wrap > img,
 .section.cont-wrap > div {
   margin: 0 1% 2%;
@@ -1862,65 +1852,94 @@ td {
   display: block;
 }
 @media all and (min-width: 1040px) {
-  /* line 23, scss/objects/_sections.scss */
+  /* line 16, scss/objects/_sections.scss */
   .section.cont-wrap > img,
   .section.cont-wrap > div {
     margin: 0 10px 2%;
   }
 }
-/* line 31, scss/objects/_sections.scss */
+/* line 24, scss/objects/_sections.scss */
 .section.cont-wrap > .g {
   margin: 0;
   max-width: 100%;
 }
 @media all and (min-width: 1040px) {
-  /* line 19, scss/objects/_sections.scss */
+  /* line 12, scss/objects/_sections.scss */
   .section.cont-wrap {
     padding: 6% 10px;
   }
 }
 
-/* line 39, scss/objects/_sections.scss */
+/* line 32, scss/objects/_sections.scss */
 .section-title {
   margin-bottom: 0.5rem;
 }
 
 /* Home Main */
-/* line 44, scss/objects/_sections.scss */
+/* line 37, scss/objects/_sections.scss */
 .section.home-main {
   text-align: center;
-  margin: 120px 0 200px;
+  margin: 60px 0 120px;
+  background: transparent;
+  padding: 0;
 }
-/* line 48, scss/objects/_sections.scss */
+/* line 43, scss/objects/_sections.scss */
 .section.home-main > h1 {
   color: #6c6c71;
   font-size: 4em;
+  margin-bottom: 0.25em;
+}
+/* line 48, scss/objects/_sections.scss */
+.section.home-main p {
+  font-size: 1.2em;
+}
+
+/* line 52, scss/objects/_sections.scss */
+.section.big-notice {
+  background: #cb4627;
+  padding: 0;
+  margin-bottom: 200px;
+}
+/* line 58, scss/objects/_sections.scss */
+.section.big-notice .article-header.tcrd {
+  background: #cb4627;
+}
+/* line 62, scss/objects/_sections.scss */
+.section.big-notice .article-header.tcrd h1, .section.big-notice .article-header.tcrd h5 {
+  color: #eae8d3;
+}
+/* line 68, scss/objects/_sections.scss */
+.section.big-notice .text {
+  border: 1px solid #cb4627;
+  background: #eae8d3;
+  color: #cb4627;
+  font-size: 1.15em;
 }
 
 /* Team */
-/* line 55, scss/objects/_sections.scss */
+/* line 81, scss/objects/_sections.scss */
 .section.team {
   padding: 50px 3%;
 }
-/* line 58, scss/objects/_sections.scss */
+/* line 84, scss/objects/_sections.scss */
 .section.team .team-member {
   padding: 0;
   margin: 0 0 20px;
 }
 @media all and (min-width: 28em) {
-  /* line 58, scss/objects/_sections.scss */
+  /* line 84, scss/objects/_sections.scss */
   .section.team .team-member {
     width: 50%;
     float: left;
   }
 }
-/* line 68, scss/objects/_sections.scss */
+/* line 94, scss/objects/_sections.scss */
 .section.team .team-member img,
 .section.team .team-member .team-deets {
   display: block;
 }
 @media all and (min-width: 28em) {
-  /* line 68, scss/objects/_sections.scss */
+  /* line 94, scss/objects/_sections.scss */
   .section.team .team-member img,
   .section.team .team-member .team-deets {
     width: 90%;
@@ -1928,30 +1947,30 @@ td {
   }
 }
 @media all and (min-width: 45em) {
-  /* line 68, scss/objects/_sections.scss */
+  /* line 94, scss/objects/_sections.scss */
   .section.team .team-member img,
   .section.team .team-member .team-deets {
     width: 300px;
   }
 }
-/* line 80, scss/objects/_sections.scss */
+/* line 106, scss/objects/_sections.scss */
 .section.team .team-member .team-deets {
   background: #e4e2c6;
   padding: 20px;
   font-size: 0.875em;
 }
-/* line 85, scss/objects/_sections.scss */
+/* line 111, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .email {
   float: left;
   padding: 0;
   margin: 0;
 }
-/* line 91, scss/objects/_sections.scss */
+/* line 117, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .nav-social {
   float: right;
   height: 18px;
 }
-/* line 95, scss/objects/_sections.scss */
+/* line 121, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .nav-social li {
   margin-right: 0;
   margin-left: 7px;
