--- a/css/scss/objects/_sections.scss
+++ b/css/scss/objects/_sections.scss
@@ -162,12 +162,19 @@
 
 }
 .team-about {
-	margin: $padpx*1.5 0;
-	background: #E4E2C6;
+	margin: $padpx*3 0;
+	background: transparent;
+
+	-webkit-transition: background-color 600ms ease;
+    -moz-transition: background-color 600ms ease;
+    -o-transition: background-color 600ms ease;
+    -ms-transition: background-color 600ms ease;
+    transition: background-color 600ms ease;
 
 	.article-header.tcrd {
-		background: #E4E2C6;
+		background: transparent;
 		padding-top:$padpx;
+		z-index:2;
 
 		@media all and (min-width: $bp-med) {
 			padding-top:$padpx*2;
@@ -188,11 +195,21 @@
 				max-width: 200px;
 				top: -1.5em;
 				position: relative;
+				cursor:pointer;
 			}
 		}
 	}
 	h4 {
 		font-size: 1em;
+		cursor:pointer;
+		position:relative;
+
+		span.genericon {
+			position: absolute;
+			right: 0;
+			font-size: 1.5em;
+			top: -3px;
+		}
 	}
 	h5.subheading {
 		color: $grey;
@@ -200,25 +217,81 @@
 		margin-top: 0;
 		font-style: normal;
 		margin-bottom: 1.18em;
-		border-bottom: 2px solid #94A8AD;
 		padding-bottom: .2em;
 		line-height:1.6;
+		position:relative;
+
+		&::before {
+			content:"";
+			position:absolute;
+			right:0;
+			bottom:0;
+			height:2px;
+			background: $blue-med;
+			width:100%;
+
+			@media all and (min-width: $bp-large) {
+				width:138%;
+			}
+
+			webkit-transition: width 600ms, background-color 600ms;
+			-moz-transition: width 600ms, background-color 600ms;
+			-o-transition: width 600ms, background-color 600ms;
+			transition: width 600ms, background-color 600ms;
+		}
+	}
+	.text {
+		background:transparent;
+
+		.slide {
+			max-height:0;
+			overflow:hidden;
+			webkit-transition: max-height 600ms ease;
+			-moz-transition: max-height 600ms ease;
+			-o-transition: max-height 600ms ease;
+			transition: max-height 600ms ease;
+		}
 	}
 	.email {
-				float: left;
-				padding: 0;
-				margin: 0;
-			}
-
-			.nav-social {
-				float: right;
-				height: 18px;
-
-				li {
-					margin-right: 0;
-					margin-left: 7px;
+				display:block;
+				text-align:right;
+				@media all and (min-width: $bp-med) {
+					float: left;
+					padding: 0;
+					margin: 0;
 				}
 			}
+
+	.nav-social {
+		float: right;
+		height: 18px;
+
+		li {
+			margin-right: 0;
+			margin-left: 7px;
+		}
+	}
+	.proj-link {
+		display:block;
+		text-align:right;
+	}
+}
+.team-about.open {
+	
+	background:$creme-dark;
+
+	h4 span.genericon-expand::before {
+		content: '\f432';
+	}
+	
+	.text .slide {
+		max-height:500px;
+	}
+	h5.subheading::before {
+		width:100%;
+		background:$red;
+	}
+
 }
 
 
