--- a/css/style.css
+++ b/css/style.css
@@ -1012,13 +1012,18 @@ td {
 }
 
 /* line 12, scss/objects/_header.scss */
+.admin-bar .header {
+  top: 32px;
+}
+
+/* line 16, scss/objects/_header.scss */
 .logolink {
   width: 35px;
   margin: 0 auto;
   display: block;
 }
 
-/* line 18, scss/objects/_header.scss */
+/* line 22, scss/objects/_header.scss */
 .nav-toggle {
   position: absolute;
   display: block;
@@ -1030,25 +1035,25 @@ td {
   top: 0;
 }
 @media all and (min-width: 24em) {
-  /* line 18, scss/objects/_header.scss */
+  /* line 22, scss/objects/_header.scss */
   .nav-toggle {
     right: 20px;
   }
 }
 @media all and (min-width: 35em) {
-  /* line 18, scss/objects/_header.scss */
+  /* line 22, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 
-/* line 37, scss/objects/_header.scss */
+/* line 41, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 35em) {
-  /* line 37, scss/objects/_header.scss */
+  /* line 41, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
@@ -2012,27 +2017,33 @@ td {
 
 /* line 164, scss/objects/_sections.scss */
 .team-about {
-  margin: 30px 0;
-  background: #E4E2C6;
+  margin: 60px 0;
+  background: transparent;
+  -webkit-transition: background-color 600ms ease;
+  -moz-transition: background-color 600ms ease;
+  -o-transition: background-color 600ms ease;
+  -ms-transition: background-color 600ms ease;
+  transition: background-color 600ms ease;
 }
-/* line 168, scss/objects/_sections.scss */
+/* line 174, scss/objects/_sections.scss */
 .team-about .article-header.tcrd {
-  background: #E4E2C6;
+  background: transparent;
   padding-top: 20px;
+  z-index: 2;
 }
 @media all and (min-width: 28em) {
-  /* line 168, scss/objects/_sections.scss */
+  /* line 174, scss/objects/_sections.scss */
   .team-about .article-header.tcrd {
     padding-top: 40px;
   }
 }
 @media all and (min-width: 45em) {
-  /* line 168, scss/objects/_sections.scss */
+  /* line 174, scss/objects/_sections.scss */
   .team-about .article-header.tcrd {
     padding-top: 0;
   }
 }
-/* line 179, scss/objects/_sections.scss */
+/* line 186, scss/objects/_sections.scss */
 .team-about .article-header.tcrd div {
   width: 200px;
   height: 200px;
@@ -2041,42 +2052,115 @@ td {
   border-radius: 50%;
   margin: 0 auto;
 }
-/* line 187, scss/objects/_sections.scss */
+/* line 194, scss/objects/_sections.scss */
 .team-about .article-header.tcrd div img {
   max-width: 200px;
   top: -1.5em;
   position: relative;
+  cursor: pointer;
 }
-/* line 194, scss/objects/_sections.scss */
+/* line 202, scss/objects/_sections.scss */
 .team-about h4 {
   font-size: 1em;
+  cursor: pointer;
+  position: relative;
 }
-/* line 197, scss/objects/_sections.scss */
+/* line 207, scss/objects/_sections.scss */
+.team-about h4 span.genericon {
+  position: absolute;
+  right: 0;
+  font-size: 1.5em;
+  top: -3px;
+}
+/* line 214, scss/objects/_sections.scss */
 .team-about h5.subheading {
   color: #6C6C71;
   font-size: 1em;
   margin-top: 0;
   font-style: normal;
   margin-bottom: 1.18em;
-  border-bottom: 2px solid #94A8AD;
   padding-bottom: .2em;
   line-height: 1.6;
+  position: relative;
 }
-/* line 207, scss/objects/_sections.scss */
+/* line 224, scss/objects/_sections.scss */
+.team-about h5.subheading::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 2px;
+  background: #94A8AD;
+  width: 100%;
+  webkit-transition: width 600ms, background-color 600ms;
+  -moz-transition: width 600ms, background-color 600ms;
+  -o-transition: width 600ms, background-color 600ms;
+  transition: width 600ms, background-color 600ms;
+}
+@media all and (min-width: 45em) {
+  /* line 224, scss/objects/_sections.scss */
+  .team-about h5.subheading::before {
+    width: 138%;
+  }
+}
+/* line 243, scss/objects/_sections.scss */
+.team-about .text {
+  background: transparent;
+}
+/* line 246, scss/objects/_sections.scss */
+.team-about .text .slide {
+  max-height: 0;
+  overflow: hidden;
+  webkit-transition: max-height 600ms ease;
+  -moz-transition: max-height 600ms ease;
+  -o-transition: max-height 600ms ease;
+  transition: max-height 600ms ease;
+}
+/* line 255, scss/objects/_sections.scss */
 .team-about .email {
-  float: left;
-  padding: 0;
-  margin: 0;
+  display: block;
+  text-align: right;
 }
-/* line 213, scss/objects/_sections.scss */
+@media all and (min-width: 28em) {
+  /* line 255, scss/objects/_sections.scss */
+  .team-about .email {
+    float: left;
+    padding: 0;
+    margin: 0;
+  }
+}
+/* line 265, scss/objects/_sections.scss */
 .team-about .nav-social {
   float: right;
   height: 18px;
 }
-/* line 217, scss/objects/_sections.scss */
+/* line 269, scss/objects/_sections.scss */
 .team-about .nav-social li {
   margin-right: 0;
   margin-left: 7px;
+}
+/* line 274, scss/objects/_sections.scss */
+.team-about .proj-link {
+  display: block;
+  text-align: right;
+}
+
+/* line 279, scss/objects/_sections.scss */
+.team-about.open {
+  background: #DEDCBB;
+}
+/* line 283, scss/objects/_sections.scss */
+.team-about.open h4 span.genericon-expand::before {
+  content: '\f432';
+}
+/* line 287, scss/objects/_sections.scss */
+.team-about.open .text .slide {
+  max-height: 500px;
+}
+/* line 290, scss/objects/_sections.scss */
+.team-about.open h5.subheading::before {
+  width: 100%;
+  background: #CB4627;
 }
 
 /* line 2, scss/objects/_article.scss */
