fall 2015 refresh, wider max-width, less nested layout, image classes, etc

--- a/css/scss/base/_media.scss
+++ b/css/scss/base/_media.scss
@@ -7,6 +7,12 @@ img, video, object {
 	width: 100%;
 	height: auto;
 }
+@media all and (min-width: $bp-large) {
+	.freeform img.gif {
+		width:auto;
+		cursor:progress;
+	}
+}
 
 iframe {
 	margin-bottom: $space;
