--- a/css/scss/objects/_blocks.scss
+++ b/css/scss/objects/_blocks.scss
@@ -145,10 +145,11 @@
 }
 .phead {
 	position:relative;
+	margin:0 1%;
 }
 .imgdesc {
 	position:relative;
-	background: $creme;
+	background: $creme-light-2;
 	
 	> img {
 		width:100%;
