--- a/css/scss/objects/_sections.scss
+++ b/css/scss/objects/_sections.scss
@@ -1,32 +1,80 @@
 .section {
-	margin: $padpx-double 0;
-	@media all and (min-width: $bp-med) {
-		margin: $padpx-quad 0;
-	}
+	margin: $padpx*5 0;
+
 	@media all and (min-width: $bp-full) {
 		max-width: $max-width;
+	}
+
+	.phead {
+		margin:0;
 	}
 
 }
 
 .section.cont-wrap {
-	padding: 6% 1%;
+	padding: 0;
+	margin: 24px 0;
+
+	@media all and (min-width: $bp-full) {
+		margin: 2% 0;
+	}
+	background:none;
 
 	> img,
 	> div {
-		margin: 0 1% 2%;
-		max-width: 98%;
+		margin: 24px 1%;
+		max-width: 100%;
 		display: block;
 		@media all and (min-width: $bp-full) {
-			margin: 0 $padpx-half 2%;
+			margin: 0 0 2%;
 		}
 	}
+
+	.web-page-head {
+	    border: 2px solid $grey-light;
+	    width: 100%;
+	    height: 18px;
+	    margin: 0;
+	    background-color: $gray-light-4;
+
+	    span {
+		    width: 9px;
+		    height:9px;
+		    border: 2px solid $grey-light;
+		    display: block;
+		    float: left;
+		    margin: 2px 0 0 8px;
+		    border-radius: 50%;
+		}
+
+	}
+
+	img.web-page {
+	    border: 2px solid $grey-light;
+	    border-top: 0;
+	}
+
+	.imgdesc .web-page-head {
+		@media all and (min-width: $bp-large) {
+			width:57.143%;
+			float:left;
+		}
+	}
+
+	.imgdesc {
+		@media all and (min-width: $bp-full) {
+			margin-left:1%;
+			margin-right:1%;
+		}
+	}
+
 	>.g {
 		margin: 0;
 		max-width: 100%;
 	}
-	@media all and (min-width: $bp-full) {
-		padding: 6% $padpx-half;
+
+	.text{
+		background:$creme-light-2;
 	}
 }
 .section-title {
@@ -230,7 +278,7 @@
 			width:100%;
 
 			@media all and (min-width: $bp-large) {
-				width:138%;
+				width:145%;
 			}
 
 			webkit-transition: width 600ms, background-color 600ms;
@@ -241,6 +289,7 @@
 	}
 	.text {
 		background:transparent;
+		padding-bottom:10%;
 
 		.slide {
 			max-height:0;
