--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ header, footer, nav, section, article, hgroup, figure {
 
 /* line 18, scss/base/_global-classes.scss */
 .wrap {
-  max-width: 1020px;
+  max-width: 1240px;
   margin: 0 auto;
   position: relative;
 }
@@ -250,7 +250,7 @@ a:hover, a:focus {
 /* line 11, scss/base/_links.scss */
 a.anchor {
   position: absolute;
-  top: -100px;
+  top: -120px;
   height: 0;
   display: block;
 }
@@ -408,31 +408,38 @@ img, video, object {
   height: auto;
 }
 
-/* line 11, scss/base/_media.scss */
+@media all and (min-width: 45em) {
+  /* line 11, scss/base/_media.scss */
+  .freeform img.gif {
+    width: auto;
+    cursor: progress;
+  }
+}
+/* line 17, scss/base/_media.scss */
 iframe {
   margin-bottom: 1rem;
 }
 
-/* line 15, scss/base/_media.scss */
+/* line 21, scss/base/_media.scss */
 figure {
   margin-bottom: 1rem;
 }
-/* line 17, scss/base/_media.scss */
+/* line 23, scss/base/_media.scss */
 figure img {
   margin-bottom: 0.25rem;
 }
 
-/* line 21, scss/base/_media.scss */
+/* line 27, scss/base/_media.scss */
 figcaption {
   font-style: italic;
 }
 
-/* line 24, scss/base/_media.scss */
+/* line 30, scss/base/_media.scss */
 .single-format-video iframe {
   width: 100%;
 }
 
-/* line 27, scss/base/_media.scss */
+/* line 33, scss/base/_media.scss */
 .videoWrapper p {
   position: relative;
   padding-bottom: 56.25%;
@@ -441,7 +448,7 @@ figcaption {
   height: 0;
 }
 
-/* line 33, scss/base/_media.scss */
+/* line 39, scss/base/_media.scss */
 .videoWrapper iframe {
   position: absolute;
   top: 0;
@@ -652,12 +659,12 @@ td {
   -o-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out;
 }
-/* line 4, scss/base/_animation.scss */
+/* line 5, scss/base/_animation.scss */
 .animate-fade:hover {
   opacity: 0;
 }
 
-/* line 10, scss/base/_animation.scss */
+/* line 11, scss/base/_animation.scss */
 .animate-move > .demo-shape {
   -webkit-transition: all 0.8s ease-in-out;
   -moz-transition: all 0.8s ease-in-out;
@@ -675,7 +682,7 @@ td {
 /* Layout Container */
 /* line 6, scss/objects/_layout.scss */
 .lc, #main {
-  max-width: 1020px;
+  max-width: 1240px;
   margin: 0 auto;
   padding: 0.5rem;
 }
@@ -715,7 +722,7 @@ td {
 .section {
   overflow: hidden;
   margin: 40px 0;
-  padding: 40px 0.875%;
+  padding: 40px 0.875% 0;
   background: #F4F2E4;
   overflow: visible;
   position: relative;
@@ -729,7 +736,7 @@ td {
 @media all and (min-width: 1040px) {
   /* line 47, scss/objects/_layout.scss */
   .section {
-    padding: 40px 10px;
+    padding: 40px 10px 0;
   }
 }
 /* line 62, scss/objects/_layout.scss */
@@ -748,7 +755,7 @@ td {
 /* line 71, scss/objects/_layout.scss */
 .gi {
   padding: 0;
-  margin: 0 1% 2.12%;
+  margin: 0 1% 24px;
   position: relative;
 }
 /* line 76, scss/objects/_layout.scss */
@@ -764,7 +771,7 @@ td {
 @media all and (min-width: 1040px) {
   /* line 71, scss/objects/_layout.scss */
   .gi {
-    margin: 0 10px 20px;
+    margin: 0 1% 2.12%;
   }
 }
 
@@ -784,12 +791,6 @@ td {
   /* line 102, scss/objects/_layout.scss */
   .g-2up > .gi:nth-of-type(odd) {
     clear: left;
-  }
-}
-@media all and (min-width: 1040px) {
-  /* line 108, scss/objects/_layout.scss */
-  .g-2up > .gi {
-    width: 460px;
   }
 }
 
@@ -828,12 +829,6 @@ td {
   /* line 147, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(3n+1) {
     clear: left;
-  }
-}
-@media all and (min-width: 1040px) {
-  /* line 153, scss/objects/_layout.scss */
-  .g-3up > .gi {
-    width: 300px;
   }
 }
 
@@ -1236,7 +1231,7 @@ td {
 /* line 11, scss/objects/_text.scss */
 .section .ghead {
   position: absolute;
-  top: -24px;
+  top: -50px;
   width: 100%;
   left: 0;
 }
@@ -1251,7 +1246,7 @@ td {
 @media all and (min-width: 1040px) {
   /* line 18, scss/objects/_text.scss */
   .ghead {
-    padding-left: 20px;
+    padding-left: 23px;
   }
 }
 
@@ -1312,7 +1307,7 @@ td {
 @media all and (min-width: 45em) {
   /* line 67, scss/objects/_text.scss */
   .text {
-    padding: 10% 10% 7%;
+    padding: 10% 10% 8%;
   }
 }
 /* line 79, scss/objects/_text.scss */
@@ -1732,30 +1727,31 @@ td {
 /* line 146, scss/objects/_blocks.scss */
 .phead {
   position: relative;
+  margin: 0 1%;
 }
 
-/* line 149, scss/objects/_blocks.scss */
+/* line 150, scss/objects/_blocks.scss */
 .imgdesc {
   position: relative;
-  background: #E4E2C6;
+  background: #F4F2E4;
 }
-/* line 153, scss/objects/_blocks.scss */
+/* line 154, scss/objects/_blocks.scss */
 .imgdesc > img {
   width: 100%;
 }
 @media all and (min-width: 45em) {
-  /* line 153, scss/objects/_blocks.scss */
+  /* line 154, scss/objects/_blocks.scss */
   .imgdesc > img {
     width: 57.143%;
     float: left;
   }
 }
-/* line 162, scss/objects/_blocks.scss */
+/* line 163, scss/objects/_blocks.scss */
 .imgdesc .desc {
   width: 100%;
 }
 @media all and (min-width: 45em) {
-  /* line 162, scss/objects/_blocks.scss */
+  /* line 163, scss/objects/_blocks.scss */
   .imgdesc .desc {
     height: 100%;
     width: 42.857%;
@@ -1828,80 +1824,121 @@ td {
 
 /* line 1, scss/objects/_sections.scss */
 .section {
-  margin: 40px 0;
-}
-@media all and (min-width: 28em) {
-  /* line 1, scss/objects/_sections.scss */
-  .section {
-    margin: 80px 0;
-  }
+  margin: 100px 0;
 }
 @media all and (min-width: 1040px) {
   /* line 1, scss/objects/_sections.scss */
   .section {
-    max-width: 1020px;
+    max-width: 1240px;
   }
 }
-
-/* line 12, scss/objects/_sections.scss */
-.section.cont-wrap {
-  padding: 6% 1%;
+/* line 8, scss/objects/_sections.scss */
+.section .phead {
+  margin: 0;
 }
-/* line 15, scss/objects/_sections.scss */
+
+/* line 14, scss/objects/_sections.scss */
+.section.cont-wrap {
+  padding: 0;
+  margin: 24px 0;
+  background: none;
+}
+@media all and (min-width: 1040px) {
+  /* line 14, scss/objects/_sections.scss */
+  .section.cont-wrap {
+    margin: 2% 0;
+  }
+}
+/* line 23, scss/objects/_sections.scss */
 .section.cont-wrap > img,
 .section.cont-wrap > div {
-  margin: 0 1% 2%;
-  max-width: 98%;
+  margin: 24px 1%;
+  max-width: 100%;
   display: block;
 }
 @media all and (min-width: 1040px) {
-  /* line 15, scss/objects/_sections.scss */
+  /* line 23, scss/objects/_sections.scss */
   .section.cont-wrap > img,
   .section.cont-wrap > div {
-    margin: 0 10px 2%;
+    margin: 0 0 2%;
   }
 }
-/* line 24, scss/objects/_sections.scss */
+/* line 33, scss/objects/_sections.scss */
+.section.cont-wrap .web-page-head {
+  border: 2px solid #989898;
+  width: 100%;
+  height: 18px;
+  margin: 0;
+  background-color: #bbb;
+}
+/* line 40, scss/objects/_sections.scss */
+.section.cont-wrap .web-page-head span {
+  width: 9px;
+  height: 9px;
+  border: 2px solid #989898;
+  display: block;
+  float: left;
+  margin: 2px 0 0 8px;
+  border-radius: 50%;
+}
+/* line 52, scss/objects/_sections.scss */
+.section.cont-wrap img.web-page {
+  border: 2px solid #989898;
+  border-top: 0;
+}
+@media all and (min-width: 45em) {
+  /* line 57, scss/objects/_sections.scss */
+  .section.cont-wrap .imgdesc .web-page-head {
+    width: 57.143%;
+    float: left;
+  }
+}
+@media all and (min-width: 1040px) {
+  /* line 64, scss/objects/_sections.scss */
+  .section.cont-wrap .imgdesc {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+}
+/* line 71, scss/objects/_sections.scss */
 .section.cont-wrap > .g {
   margin: 0;
   max-width: 100%;
 }
-@media all and (min-width: 1040px) {
-  /* line 12, scss/objects/_sections.scss */
-  .section.cont-wrap {
-    padding: 6% 10px;
-  }
+/* line 76, scss/objects/_sections.scss */
+.section.cont-wrap .text {
+  background: #F4F2E4;
 }
 
-/* line 32, scss/objects/_sections.scss */
+/* line 80, scss/objects/_sections.scss */
 .section-title {
   margin-bottom: 0.5rem;
 }
 
 /* Home Main */
-/* line 37, scss/objects/_sections.scss */
+/* line 85, scss/objects/_sections.scss */
 .section.home-main {
   text-align: center;
   margin: 60px 0 120px;
   background: transparent;
   padding: 0;
 }
-/* line 43, scss/objects/_sections.scss */
+/* line 91, scss/objects/_sections.scss */
 .section.home-main > h1 {
   color: #6C6C71;
   font-size: 4em;
   margin-bottom: 0.25em;
 }
-/* line 48, scss/objects/_sections.scss */
+/* line 96, scss/objects/_sections.scss */
 .section.home-main p {
   font-size: 1.2em;
 }
-/* line 51, scss/objects/_sections.scss */
+/* line 99, scss/objects/_sections.scss */
 .section.home-main p em {
   display: block;
   position: relative;
 }
-/* line 55, scss/objects/_sections.scss */
+/* line 103, scss/objects/_sections.scss */
 .section.home-main p em::before {
   content: "";
   display: block;
@@ -1913,25 +1950,25 @@ td {
   position: relative;
 }
 
-/* line 68, scss/objects/_sections.scss */
+/* line 116, scss/objects/_sections.scss */
 .section.big-notice,
 .section.makers {
   background: #CB4627;
   padding: 0;
   margin-bottom: 200px;
 }
-/* line 75, scss/objects/_sections.scss */
+/* line 123, scss/objects/_sections.scss */
 .section.big-notice .article-header.tcrd,
 .section.makers .article-header.tcrd {
   background: #CB4627;
 }
-/* line 79, scss/objects/_sections.scss */
+/* line 127, scss/objects/_sections.scss */
 .section.big-notice .article-header.tcrd h1, .section.big-notice .article-header.tcrd h5,
 .section.makers .article-header.tcrd h1,
 .section.makers .article-header.tcrd h5 {
   color: #EAE8D3;
 }
-/* line 85, scss/objects/_sections.scss */
+/* line 133, scss/objects/_sections.scss */
 .section.big-notice .text,
 .section.makers .text {
   border: 2px solid #CB4627;
@@ -1940,45 +1977,45 @@ td {
   font-size: 1.15em;
 }
 
-/* line 95, scss/objects/_sections.scss */
+/* line 143, scss/objects/_sections.scss */
 .section.makers {
   background: #738D97;
   margin-bottom: 30px;
 }
-/* line 98, scss/objects/_sections.scss */
+/* line 146, scss/objects/_sections.scss */
 .section.makers .article-header.tcrd {
   background: #738D97;
 }
-/* line 105, scss/objects/_sections.scss */
+/* line 153, scss/objects/_sections.scss */
 .section.makers .text {
   border: 2px solid #738D97;
   color: #738D97;
 }
 
 /* Team */
-/* line 115, scss/objects/_sections.scss */
+/* line 163, scss/objects/_sections.scss */
 .section.team {
   padding: 50px 3%;
 }
-/* line 118, scss/objects/_sections.scss */
+/* line 166, scss/objects/_sections.scss */
 .section.team .team-member {
   padding: 0;
   margin: 0 0 20px;
 }
 @media all and (min-width: 28em) {
-  /* line 118, scss/objects/_sections.scss */
+  /* line 166, scss/objects/_sections.scss */
   .section.team .team-member {
     width: 50%;
     float: left;
   }
 }
-/* line 127, scss/objects/_sections.scss */
+/* line 175, scss/objects/_sections.scss */
 .section.team .team-member img,
 .section.team .team-member .team-deets {
   display: block;
 }
 @media all and (min-width: 28em) {
-  /* line 127, scss/objects/_sections.scss */
+  /* line 175, scss/objects/_sections.scss */
   .section.team .team-member img,
   .section.team .team-member .team-deets {
     width: 90%;
@@ -1986,36 +2023,36 @@ td {
   }
 }
 @media all and (min-width: 45em) {
-  /* line 127, scss/objects/_sections.scss */
+  /* line 175, scss/objects/_sections.scss */
   .section.team .team-member img,
   .section.team .team-member .team-deets {
     width: 300px;
   }
 }
-/* line 140, scss/objects/_sections.scss */
+/* line 188, scss/objects/_sections.scss */
 .section.team .team-member .team-deets {
   background: #E4E2C6;
   padding: 20px;
   font-size: 0.875em;
 }
-/* line 145, scss/objects/_sections.scss */
+/* line 193, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .email {
   float: left;
   padding: 0;
   margin: 0;
 }
-/* line 151, scss/objects/_sections.scss */
+/* line 199, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .nav-social {
   float: right;
   height: 18px;
 }
-/* line 155, scss/objects/_sections.scss */
+/* line 203, scss/objects/_sections.scss */
 .section.team .team-member .team-deets .nav-social li {
   margin-right: 0;
   margin-left: 7px;
 }
 
-/* line 164, scss/objects/_sections.scss */
+/* line 212, scss/objects/_sections.scss */
 .team-about {
   margin: 60px 0;
   background: transparent;
@@ -2025,25 +2062,25 @@ td {
   -ms-transition: background-color 600ms ease;
   transition: background-color 600ms ease;
 }
-/* line 174, scss/objects/_sections.scss */
+/* line 222, scss/objects/_sections.scss */
 .team-about .article-header.tcrd {
   background: transparent;
   padding-top: 20px;
   z-index: 2;
 }
 @media all and (min-width: 28em) {
-  /* line 174, scss/objects/_sections.scss */
+  /* line 222, scss/objects/_sections.scss */
   .team-about .article-header.tcrd {
     padding-top: 40px;
   }
 }
 @media all and (min-width: 45em) {
-  /* line 174, scss/objects/_sections.scss */
+  /* line 222, scss/objects/_sections.scss */
   .team-about .article-header.tcrd {
     padding-top: 0;
   }
 }
-/* line 186, scss/objects/_sections.scss */
+/* line 234, scss/objects/_sections.scss */
 .team-about .article-header.tcrd div {
   width: 200px;
   height: 200px;
@@ -2052,26 +2089,26 @@ td {
   border-radius: 50%;
   margin: 0 auto;
 }
-/* line 194, scss/objects/_sections.scss */
+/* line 242, scss/objects/_sections.scss */
 .team-about .article-header.tcrd div img {
   max-width: 200px;
   position: relative;
   cursor: pointer;
 }
-/* line 201, scss/objects/_sections.scss */
+/* line 249, scss/objects/_sections.scss */
 .team-about h4 {
   font-size: 1em;
   cursor: pointer;
   position: relative;
 }
-/* line 206, scss/objects/_sections.scss */
+/* line 254, scss/objects/_sections.scss */
 .team-about h4 span.genericon {
   position: absolute;
   right: 0;
   font-size: 1.5em;
   top: -3px;
 }
-/* line 213, scss/objects/_sections.scss */
+/* line 261, scss/objects/_sections.scss */
 .team-about h5.subheading {
   color: #6C6C71;
   font-size: 1em;
@@ -2082,7 +2119,7 @@ td {
   line-height: 1.6;
   position: relative;
 }
-/* line 223, scss/objects/_sections.scss */
+/* line 271, scss/objects/_sections.scss */
 .team-about h5.subheading::before {
   content: "";
   position: absolute;
@@ -2097,16 +2134,17 @@ td {
   transition: width 600ms, background-color 600ms;
 }
 @media all and (min-width: 45em) {
-  /* line 223, scss/objects/_sections.scss */
+  /* line 271, scss/objects/_sections.scss */
   .team-about h5.subheading::before {
-    width: 138%;
+    width: 145%;
   }
 }
-/* line 242, scss/objects/_sections.scss */
+/* line 290, scss/objects/_sections.scss */
 .team-about .text {
   background: transparent;
+  padding-bottom: 10%;
 }
-/* line 245, scss/objects/_sections.scss */
+/* line 294, scss/objects/_sections.scss */
 .team-about .text .slide {
   max-height: 0;
   overflow: hidden;
@@ -2115,48 +2153,48 @@ td {
   -o-transition: max-height 600ms ease;
   transition: max-height 600ms ease;
 }
-/* line 254, scss/objects/_sections.scss */
+/* line 303, scss/objects/_sections.scss */
 .team-about .email {
   display: block;
   text-align: right;
 }
 @media all and (min-width: 28em) {
-  /* line 254, scss/objects/_sections.scss */
+  /* line 303, scss/objects/_sections.scss */
   .team-about .email {
     float: left;
     padding: 0;
     margin: 0;
   }
 }
-/* line 264, scss/objects/_sections.scss */
+/* line 313, scss/objects/_sections.scss */
 .team-about .nav-social {
   float: right;
   height: 18px;
 }
-/* line 268, scss/objects/_sections.scss */
+/* line 317, scss/objects/_sections.scss */
 .team-about .nav-social li {
   margin-right: 0;
   margin-left: 7px;
 }
-/* line 273, scss/objects/_sections.scss */
+/* line 322, scss/objects/_sections.scss */
 .team-about .proj-link {
   display: block;
   text-align: right;
 }
 
-/* line 278, scss/objects/_sections.scss */
+/* line 327, scss/objects/_sections.scss */
 .team-about.open {
   background: #DEDCBB;
 }
-/* line 282, scss/objects/_sections.scss */
+/* line 331, scss/objects/_sections.scss */
 .team-about.open h4 span.genericon-expand::before {
   content: '\f432';
 }
-/* line 286, scss/objects/_sections.scss */
+/* line 335, scss/objects/_sections.scss */
 .team-about.open .text .slide {
   max-height: 500px;
 }
-/* line 289, scss/objects/_sections.scss */
+/* line 338, scss/objects/_sections.scss */
 .team-about.open h5.subheading::before {
   width: 100%;
   background: #CB4627;
